added tests and javadoc